--- a/app/src/main/res/layout/activity_post_detail.xml
+++ b/app/src/main/res/layout/activity_post_detail.xml
@@ -5,29 +5,32 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:id="@+id/drawer_layout"
-    tools:context=".SerieActivity$Post_Detail">
-    <LinearLayout
+    tools:context=".PostDetailActivity">
+    <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical">
+
         <include
-            layout="@layout/activity_top_navbar_detail"/>
-        <ScrollView
+            android:id="@+id/include"
+            layout="@layout/activity_top_navbar_detail" />
+
+        <LinearLayout
             android:id="@+id/scrollView3"
             android:layout_width="match_parent"
-            android:layout_height="620dp"
+            android:layout_height="0dp"
+            android:layout_marginBottom="8dp"
+            app:layout_constraintBottom_toTopOf="@+id/divider7"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.551"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent">
+            app:layout_constraintTop_toBottomOf="@+id/include">
 
             <LinearLayout
                 android:id="@+id/layout_wrapper"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
+                android:layout_height="match_parent"
                 android:orientation="vertical"
-                android:paddingLeft="10dp"
-                android:paddingRight="10dp">
+                android:padding="16dp">
 
 
                 <TextView
@@ -36,13 +39,13 @@
                     android:layout_height="wrap_content"
                     android:text="Arrow Function trong JavaScript ES6 và tại sao phải dung nó?"
                     android:textColor="#000000"
-                    android:textSize="16sp"
+                    android:textSize="20sp"
                     android:textStyle="bold" />
 
                 <androidx.constraintlayout.widget.ConstraintLayout
                     android:id="@+id/layout_postInfo"
                     android:layout_width="match_parent"
-                    android:layout_height="match_parent"
+                    android:layout_height="wrap_content"
                     android:layout_marginTop="8dp"
                     android:layout_marginBottom="8dp">
 
@@ -67,7 +70,7 @@
                         android:layout_marginStart="5dp"
                         android:text="Dustin Dinh"
                         android:textColor="#5488C7"
-                        android:textSize="10sp"
+                        android:textSize="14sp"
                         app:layout_constraintStart_toEndOf="@+id/post_author_img"
                         app:layout_constraintTop_toTopOf="parent" />
 
@@ -76,7 +79,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:text="6 hours ago - 6 mins read"
-                        android:textSize="10sp"
+                        android:textSize="12sp"
                         app:layout_constraintBottom_toBottomOf="parent"
                         app:layout_constraintStart_toStartOf="@+id/post_author_name"
                         app:layout_constraintTop_toBottomOf="@+id/post_author_name" />
@@ -184,7 +187,7 @@
                         android:paddingRight="5dp"
                         android:text="#Javascript"
                         android:textColor="#5488C7"
-                        android:textSize="10sp"
+                        android:textSize="14sp"
                         app:layout_constraintBottom_toBottomOf="parent"
                         app:layout_constraintStart_toStartOf="parent"
                         app:layout_constraintTop_toTopOf="parent" />
@@ -196,13 +199,13 @@
                         android:paddingRight="5dp"
                         android:text="#Coding"
                         android:textColor="#5488C7"
-                        android:textSize="10sp"
+                        android:textSize="14sp"
                         app:layout_constraintBottom_toBottomOf="@+id/textView21"
                         app:layout_constraintStart_toEndOf="@+id/textView21"
                         app:layout_constraintTop_toTopOf="@+id/textView21" />
                 </androidx.constraintlayout.widget.ConstraintLayout>
 
-                <LinearLayout
+                <ScrollView
                     android:id="@+id/layout_content"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
@@ -213,32 +216,33 @@
                     <WebView
                         android:id="@+id/post.content"
                         android:layout_width="match_parent"
-                        android:layout_height="match_parent" />
-                </LinearLayout>
+                        android:layout_height="wrap_content"/>
+                </ScrollView>
 
             </LinearLayout>
-        </ScrollView>
+        </LinearLayout>
 
         <View
             android:id="@+id/divider7"
             android:layout_width="match_parent"
             android:layout_height="1dp"
-            android:layout_marginTop="10dp"
-            android:layout_marginBottom="10dp"
+            android:layout_marginBottom="8dp"
             android:background="?android:attr/listDivider"
             app:layout_constraintBottom_toTopOf="@+id/constraintLayout"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/scrollView3" />
+            app:layout_constraintHorizontal_bias="0.0"
+            app:layout_constraintStart_toStartOf="parent" />
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:id="@+id/constraintLayout"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:foregroundGravity="center_vertical|center"
+            android:paddingTop="5dp"
+            android:paddingBottom="5dp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent">
+            app:layout_constraintStart_toStartOf="parent"
+            android:background="@drawable/border_top">
 
             <ImageView
                 android:id="@+id/imageView"
@@ -316,5 +320,5 @@
                 app:layout_constraintStart_toEndOf="@+id/textView23"
                 app:layout_constraintTop_toTopOf="parent" />
         </androidx.constraintlayout.widget.ConstraintLayout>
-    </LinearLayout>
+    </androidx.constraintlayout.widget.ConstraintLayout>
 </androidx.drawerlayout.widget.DrawerLayout>
