--- a/app/src/main/res/layout/activity_post_item.xml
+++ b/app/src/main/res/layout/activity_post_item.xml
@@ -14,7 +14,7 @@
         android:layout_height="match_parent">
 
         <LinearLayout
-            android:layout_width="275dp"
+            android:layout_width="260dp"
             android:layout_height="wrap_content"
             android:orientation="vertical">
 
@@ -23,7 +23,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="10dp"
-                android:text="%post_title%"
+                android:text="Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, "
                 android:ellipsize="end"
                 android:maxLines="2"
                 android:textColor="#000"
@@ -47,7 +47,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:orientation="vertical"
-                    android:paddingStart="8dp">
+                    android:paddingStart="10dp">
 
                     <TextView
                         android:id="@+id/txtUsernameSeries"
@@ -71,7 +71,7 @@
 
             <ImageView
                 android:id="@+id/post_item_img"
-                android:layout_width="wrap_content"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center_vertical"
                 android:background="@drawable/round_layout"
