--- a/app/src/main/res/layout/series_custom.xml
+++ b/app/src/main/res/layout/series_custom.xml
@@ -17,17 +17,6 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical">
-
-            <TextView
-                android:id="@+id/txtTitleSeries"
-                android:layout_width="388dp"
-                android:layout_height="wrap_content"
-                android:layout_marginBottom="10dp"
-                android:text="%series_title%"
-                android:textColor="#000"
-                android:textSize="20sp"
-                android:textStyle="bold" />
-
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -45,7 +34,7 @@
                     android:layout_width="350dp"
                     android:layout_height="wrap_content"
                     android:orientation="vertical"
-                    android:paddingStart="8dp">
+                    android:paddingStart="10dp">
 
                     <TextView
                         android:id="@+id/txtUsernameSeries"
@@ -61,7 +50,18 @@
                         android:text="%created_date%" />
                 </LinearLayout>
             </LinearLayout>
-
+            <TextView
+                android:id="@+id/txtTitleSeries"
+                android:layout_width="388dp"
+                android:layout_height="wrap_content"
+                android:ellipsize="end"
+                android:maxLines="2"
+                android:text="Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, "
+                android:textColor="#000"
+                android:textSize="16sp"
+                android:textStyle="bold"
+                android:layout_marginTop="5dp"
+                android:layout_marginBottom="5dp"/>
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -71,7 +71,9 @@
                     android:id="@+id/txtContentSeries"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:text="%content_series%" />
+                    android:ellipsize="end"
+                    android:maxLines="2"
+                    android:text="Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, " />
             </LinearLayout>
         </LinearLayout>
 
